--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="main">
 
-    <div class="app">
+    <!-- <div class="app">
       <div class="app__header">
         <img src="img/logo.png" class="app__logo">
       </div>
@@ -37,6 +37,50 @@
           <i class="fa fa-volume-up" aria-hidden="true"></i>
           <div class="app__btn-text">Звук</div>
         </button>
+      </div>
+    </div> -->
+
+    <div class="app achivments">
+      <div class="app__body">
+        <div class="app__body-inner">
+          <h2 class="app__body-title">
+            <i class="fa fa-trophy" aria-hidden="true"></i>
+            Достижения
+          </h2>
+          <div class="app__body-top">
+            <div class="app__card">
+              <div class="app_card-text">Счёт</div>
+              <div class="app_card-count">0</div>
+            </div>
+            <div class="app__card">
+              <div class="app_card-text">Открыто рас</div>
+              <div class="app_card-count">0</div>
+            </div>
+            <div class="app__card">
+              <div class="app_card-text">Всего игр</div>
+              <div class="app_card-count">0</div>
+            </div>
+            <div class="app__card">
+              <div class="app_card-text">Любимая раса</div>
+              <div class="app_card-count">0</div>
+            </div>
+          </div>
+          <div class="app__body-middle">
+            <div class="app__result">
+              <div class="app__result-score">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <div class="app__result-count">150</div>
+              </div>
+              <div class="app__result-name">Зерг</div>
+              <div class="app__result-amount">5</div>
+            </div>
+          </div>
+          <div class="app__body-bottom">
+            <button class="app__btn btn__back btn__achivment">
+              <i class="fa fa-reply" aria-hidden="true"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
 
