--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </div> -->
 
-    <div class="app achivments">
+    <!-- <div class="app achivments">
       <div class="app__body">
         <div class="app__body-inner">
           <h2 class="app__body-title">
@@ -81,6 +81,40 @@
             </button>
           </div>
         </div>
+      </div>
+    </div> -->
+
+    <!-- <div class="app">
+      <div class="app__header">
+        <div class="app__header-inner">
+          <div class="app__count"># 1</div>
+          <div class="app__text">Текст вопроса</div>
+        </div>
+      </div>
+      <div class="app__body">
+        <button class="app__btn">
+          <div class="app__btn-text">Ответ 1</div>
+        </button>
+      </div>
+    </div> -->
+
+    <div class="app">
+      <div class="app__body">
+        <a href="https://vk.com/id708644989" class="app__btn" target="_blank">
+          <i class="fa fa-vk" aria-hidden="true"></i>
+          <div class="app__btn-text">ВКонтакте</div>
+        </a>
+        <a href="https://t.me/organism1975" class="app__btn" target="_blank">
+          <i class="fa fa-telegram" aria-hidden="true"></i>
+          <div class="app__btn-text">Телеграм</div>
+        </a>
+        <a href="https://github.com/PavelKuprianov" class="app__btn" target="_blank">
+          <i class="fa fa-github" aria-hidden="true"></i>
+          <div class="app__btn-text">Github</div>
+        </a>
+        <button class="app__btn btn__back">
+          <i class="fa fa-reply" aria-hidden="true"></i>
+        </button>
       </div>
     </div>
 
