--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </div> -->
 
-    <div class="app">
+    <!-- <div class="app">
       <div class="app__body">
         <a href="https://vk.com/id708644989" class="app__btn" target="_blank">
           <i class="fa fa-vk" aria-hidden="true"></i>
@@ -115,6 +115,31 @@
         <button class="app__btn btn__back">
           <i class="fa fa-reply" aria-hidden="true"></i>
         </button>
+      </div>
+    </div> -->
+
+    <div class="app results" data-race="protoss">
+      <div class="app__body">
+        <div class="app__results-inner">
+          <div class="results__title">protoss</div>
+          <div class="results__img">
+            <img src="img/protoss_logo.png">
+          </div>
+          <div class="results__text-box">
+            <p class="results__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aliquid nisi voluptatum adipisci dolores corporis ipsam rem?
+              Cupiditate molestiae ipsum blanditiis quia nostrum quam consequuntur beatae ullam atque.
+              Iste, maiores dicta?</p>
+            <p class="results__quote">Цитата №1</p>
+            <p class="results__quote">Цитата №2</p>
+            <p class="results__author">Дормидонт Злонравов</p>
+          </div>
+          <div>
+            <button class="app__btn btn__back btn__protoss">
+              <i class="fa fa-reply" aria-hidden="true"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
 
