--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 
   <div class="main">
 
-    <!-- <div class="app">
+    <div class="app" v-show="showMain">
       <div class="app__header">
         <img src="img/logo.png" class="app__logo">
       </div>
       <div class="app__body">
-        <button class="app__btn">
+        <button class="app__btn" @click="goToQuestions">
           <i class="fa fa-play-circle-o" aria-hidden="true"></i>
           <div class="app__btn-text">Начать</div>
         </button>
-        <button class="app__btn">
+        <button class="app__btn" @click="goToAchivments">
           <i class="fa fa-trophy" aria-hidden="true"></i>
           <div class="app__btn-text">Достижения</div>
         </button>
-        <button class="app__btn">
+        <button class="app__btn" @click="goToSocial">
           <i class="fa fa-user" aria-hidden="true"></i>
           <div class="app__btn-text">Автор</div>
         </button>
@@ -38,9 +38,9 @@
           <div class="app__btn-text">Звук</div>
         </button>
       </div>
-    </div> -->
+    </div>
 
-    <!-- <div class="app achivments">
+    <div class="app achivments" v-show="showAchivments">
       <div class="app__body">
         <div class="app__body-inner">
           <h2 class="app__body-title">
@@ -76,29 +76,30 @@
             </div>
           </div>
           <div class="app__body-bottom">
-            <button class="app__btn btn__back btn__achivment">
+            <button class="app__btn btn__back btn__achivment" @click="goToMain">
               <i class="fa fa-reply" aria-hidden="true"></i>
             </button>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
-    <!-- <div class="app">
+    <div class="app" v-show="showQuestions">
       <div class="app__header">
         <div class="app__header-inner">
-          <div class="app__count"># 1</div>
-          <div class="app__text">Текст вопроса</div>
+          <div class="app__count"># {{ number + 1 }}</div>
+          <div class="app__text">{{ questions[number][0] }}</div>
         </div>
       </div>
       <div class="app__body">
-        <button class="app__btn">
-          <div class="app__btn-text">Ответ 1</div>
+        <button class="app__btn" v-for="(answer, i) in questions[number][1]"
+          @click="nextQuestions(questions[number][2][i])">
+          <div class="app__btn-text">{{ answer }}</div>
         </button>
       </div>
-    </div> -->
+    </div>
 
-    <!-- <div class="app">
+    <div class="app" v-show="showSocial">
       <div class="app__body">
         <a href="https://vk.com/id708644989" class="app__btn" target="_blank">
           <i class="fa fa-vk" aria-hidden="true"></i>
@@ -112,30 +113,27 @@
           <i class="fa fa-github" aria-hidden="true"></i>
           <div class="app__btn-text">Github</div>
         </a>
-        <button class="app__btn btn__back">
+        <button class="app__btn btn__back" @click="goToMain">
           <i class="fa fa-reply" aria-hidden="true"></i>
         </button>
       </div>
-    </div> -->
+    </div>
 
-    <div class="app results" data-race="protoss">
+    <div class="app results" :data-race="resultRace" v-show="showResult">
       <div class="app__body">
         <div class="app__results-inner">
-          <div class="results__title">protoss</div>
+          <div class="results__title">{{ results[resultRace].name }}</div>
           <div class="results__img">
-            <img src="img/protoss_logo.png">
+            <img :src="'img/' + resultRace + '_logo.png'">
           </div>
           <div class="results__text-box">
-            <p class="results__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Aliquid nisi voluptatum adipisci dolores corporis ipsam rem?
-              Cupiditate molestiae ipsum blanditiis quia nostrum quam consequuntur beatae ullam atque.
-              Iste, maiores dicta?</p>
-            <p class="results__quote">Цитата №1</p>
-            <p class="results__quote">Цитата №2</p>
-            <p class="results__author">Дормидонт Злонравов</p>
+            <p class="results__text">{{ results[resultRace].description }}</p>
+            <p class="results__quote">{{ results[resultRace].quote1 }}</p>
+            <p class="results__quote">{{ results[resultRace].quote2 }}</p>
+            <p class="results__author">{{ results[resultRace].author }}</p>
           </div>
           <div>
-            <button class="app__btn btn__back btn__protoss">
+            <button :class="'app__btn btn__back btn__' + resultRace" @click="goToAchivments">
               <i class="fa fa-reply" aria-hidden="true"></i>
             </button>
           </div>
@@ -147,6 +145,46 @@
 
   <script src="./js/vue.js"></script>
   <script src="./js/const.js"></script>
+  <script src="./js/script.js">
+    // let app = new Vue({
+    //   el: '.main',
+    //   data: {
+    //     showMain: true,
+    //     showSocial: false,
+    //     showAchivments: false,
+    //     showQuestions: false,
+    //     showResult: false,
+    //     number: 0,
+    //     score: {
+    //       'zerg': 0,
+    //       'primal': 0,
+    //       'protoss': 0,
+    //       'taldarim': 0,
+    //       'terran': 0,
+    //       // 'infested': 0,
+    //       // 'hybrid': 0,
+    //     },
+    //     totalGame: localStorage.getItem('sc2TotalGame') ?
+    //       JSON.parse(localStorage.getItem('sc2TotalGame')) : {
+    //         'zerg': 0,
+    //         'primal': 0,
+    //         'protoss': 0,
+    //         'taldarim': 0,
+    //         'terran': 0,
+    //         'infested': 0,
+    //         'hybrid': 0,
+    //       },
+    //     totalGames: localStorage.getItem('sc2TotalGame') ?
+    //       localStorage.getItem('sc2TotalGame') : 0,
+    //     questions: questions,
+    //     results: results,
+    //     resultRace: 'infested',
+    //   },
+    //   methods: {
+
+    //   },
+    // })
+  </script>
 </body>
 
 </html>
